--- a/Swallab/login/profile.html
+++ b/Swallab/login/profile.html
@@ -19,7 +19,7 @@
         <div class="row">
             <div class="mySidebar col-2">
                 <a href="./profile.html" class="active">
-                    <p>個人檔案</p>
+                    <p>個人檔案1</p>
                 </a>
                 <a href="./order.html">
                     <p>我的訂單</p>
