--- a/Swallab/login/order.html
+++ b/Swallab/login/order.html
@@ -196,7 +196,7 @@
     </div>
     
     <footer>
-        <div class="container-md">
+        <div class="container">
             <div class="row">
                 <div class="col-6">
                     <img src="./../image/大專logo.png" style="border-radius: 50%; width:15%" class="m-2 ">
