--- a/Swallab/nav/nav.html
+++ b/Swallab/nav/nav.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="../css/root.css" rel="stylesheet">
+    <!-- <link href="../css/nav.css" rel="stylesheet"> -->
     <link href="../css/nav.css" rel="stylesheet">
     <link href="../css/footer.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -22,12 +23,12 @@
     <nav class="navbar navbar-expand sticky-top shadow">
         <div class="container">
             <!-- LOGO -->
-            <a class="navbar-brand ms-5" href="../headpage/headpage.html">
+            <a class="navbar-brand ms-5 col-1" href="../headpage/headpage.html">
                 <img src="../images/root/LOGO.jpg" alt="" class="logo d-inline-block align-text-top">
             </a>
             <!-- 伸縮 -->
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <div class="nav ms-0 me-5 row">
+            <div class="collapse navbar-collapse col-10" id="navbarSupportedContent">
+                <div class="nav ms-0 me-3 row">
                     <div class="nav-item col-6">
                         <!-- 首頁沒有 active -->
                         <!-- <a class="nav-link active" aria-current="page" href="#">Active</a> -->
@@ -38,22 +39,30 @@
                     </div>
                 </div>
                 <!-- Input 都在這 -->
-                <form class="ms-0 me-5 w-100" role="search" name="search">
-                    <div class="d-flex container">
+                <form class="ms-2 me-1 w-100" role="search" name="search">
+                    <div class="d-flex" style="width: 100%;">
                         <!-- hover、click 換 icon -> src="./img/blog.png" -->
-                        <div class="theicon mt-2">
-                            <!-- <img src="./img/restaurant.png" class="icon" alt=""> -->
-                            <div id="popup" class="popup position-relative">
-                                <div id="popupBlog" class="popupBlog"></div>
-                                <div id="popupRest" class="popupRest">123</div>
+                        <div id="theicon" class="theicon mt-2 me-0 align-items-center justify-content-center">
+                            <div id="popup" class="popup row text-center d-flex align-items-center justify-content-center">
+                                <p><i id="showicon" class=""></i></p>
+                            </div>
+                            <div id="popupBR" class="popupBR">
+                                <div id="popupBlog" class="col-6 text-center">
+                                    <p class="text-center"><i class="fa-solid fa-book-open"></i></p>
+                                </div>
+                                <div id="popupRest" class="col-6 text-center">
+                                    <p><i class="fa-solid fa-utensils"></i></p>
+                                </div>
                             </div>
                         </div>
+                        
+                        
 
                         <!-- 搜尋框 + 情境按鈕(pill 會改成底線) -->
-                        <div class="d-block container position-relative m-0 p-0">
+                        <div class="d-block position-relative m-0 p-0 col">
                             <!-- 搜尋框 start -->
                             <!-- <input class="form-control m-0" type="search" placeholder="Click" aria-label="Search"> -->
-                            <div style="display: flex;" clas="container row">
+                            <div style="display: flex;" clas="row">
                                 <div class="col-6">
                                     <input type="text" id="myInput" onclick="myFunction()" placeholder="點擊我"
                                         class="form-control m-0">
@@ -120,8 +129,8 @@
                     </div>
                 </form>
                 <!-- 登入及註冊按鈕 -->
-                <div class="ms-auto me-5">
-                    <a href="#" class="container">
+                <div class="ms-3 me-5 col-1">
+                    <a href="#" class="">
                         <button class="btn btn-outline-success btn-sm text-nowrap">登入/註冊</button>
                     </a>
                 </div>
