--- a/Swallab/headpage/headpage.html
+++ b/Swallab/headpage/headpage.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/root.css">
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/headpage.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -146,42 +147,50 @@
 
 <body>
     <!-- NAV_begin : sticky-top -->
-    <nav class="navbar navbar-expand bg-primary sticky-top shadow bg-body rounded">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand sticky-top shadow">
+        <div class="container">
             <!-- LOGO -->
-            <a class="navbar-brand ms-5" href="#">
-                <img src="../_images/root/LOGO.jpg" alt="" class="logo d-inline-block align-text-top">
+            <a class="navbar-brand ms-5 col-1" href="../headpage/headpage.html">
+                <img src="../images/root/logo.jpg" alt="" class="logo d-inline-block align-text-top">
             </a>
             <!-- 伸縮 -->
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <div class="nav ms-0 me-5 row">
+            <div class="collapse navbar-collapse col-10" id="navbarSupportedContent">
+                <div class="nav ms-0 me-3 row">
                     <div class="nav-item col-6">
                         <!-- 首頁沒有 active -->
                         <!-- <a class="nav-link active" aria-current="page" href="#">Active</a> -->
-                        <a class="nav-link d-block" style="white-space: nowrap;" href="#">找餐廳</a>
+                        <a class="nav-link d-block nav_mainbtn" href="../restaurant/detail.html">找餐廳</a>
                     </div>
                     <div class="nav-item col-6">
-                        <a class="nav-link d-block" style="white-space: nowrap;" href="#">看食記</a>
+                        <a class="nav-link d-block nav_mainbtn" href="../foodNotes/foodNotes.html">看食記</a>
                     </div>
                 </div>
                 <!-- Input 都在這 -->
-                <form class="ms-0 me-5" role="search" style="width: 100%;" name="search">
-                    <div class="d-flex container-fluid py-3">
+                <form class="ms-2 me-1 w-100" role="search" name="search">
+                    <div class="d-flex" style="width: 100%;">
                         <!-- hover、click 換 icon -> src="./img/blog.png" -->
-                        <div class="theicon ms-5 mt-2 me-0" onmouseover="showPopup()" onmouseout="hidePopup()"
-                            style="width: 4em;">
-                            <!-- <img src="./img/restaurant.png" class="icon" alt=""> -->
-                            <div id="popup" class="popup">
-                                <div id="popupBlog" class="popupBlog"></div>
-                                <div id="popupRest" class="popupRest"></div>
+                        <div id="theicon" class="theicon mt-2 me-0 align-items-center justify-content-center">
+                            <div id="popup"
+                                class="popup row text-center d-flex align-items-center justify-content-center">
+                                <p><i id="showicon" class=""></i></p>
+                            </div>
+                            <div id="popupBR" class="popupBR">
+                                <div id="popupBlog" class="col-6 text-center">
+                                    <p class="text-center"><i class="fa-solid fa-book-open"></i></p>
+                                </div>
+                                <div id="popupRest" class="col-6 text-center">
+                                    <p><i class="fa-solid fa-utensils"></i></p>
+                                </div>
                             </div>
                         </div>
 
+
+
                         <!-- 搜尋框 + 情境按鈕(pill 會改成底線) -->
-                        <div class="d-block container-fluid position-relative ms-2 m-0 p-0">
+                        <div class="d-block position-relative m-0 p-0 col">
                             <!-- 搜尋框 start -->
                             <!-- <input class="form-control m-0" type="search" placeholder="Click" aria-label="Search"> -->
-                            <div style="display: flex;" clas="container-fluid row">
+                            <div style="display: flex;" clas="row">
                                 <div class="col-6">
                                     <input type="text" id="myInput" onclick="myFunction()" placeholder="點擊我"
                                         class="form-control m-0">
@@ -190,11 +199,14 @@
                                         style="display: none; position: absolute;">
                                         <a href="#cate_no" onclick="fillInput('null')"
                                             class="position-relative">不挑分類</a>
-                                        <a href="#cate_hotpot" onclick="fillInput('火鍋')" class="position-relative">火鍋</a>
+                                        <a href="#cate_hotpot" onclick="fillInput('火鍋')"
+                                            class="position-relative">火鍋</a>
                                         <a href="#cate_bbq" onclick="fillInput('燒肉')" class="position-relative">燒肉</a>
-                                        <a href="#cate_izakaya" onclick="fillInput('居酒屋')" class="position-relative">居酒屋</a>
+                                        <a href="#cate_izakaya" onclick="fillInput('居酒屋')"
+                                            class="position-relative">居酒屋</a>
                                         <a href="#cate_ramen" onclick="fillInput('拉麵')" class="position-relative">拉麵</a>
-                                        <a href="#cate_dessert" onclick="fillInput('甜點')" class="position-relative">甜點</a>
+                                        <a href="#cate_dessert" onclick="fillInput('甜點')"
+                                            class="position-relative">甜點</a>
                                     </div>
                                 </div>
                                 <div class="col-6">
@@ -206,7 +218,8 @@
                                         style="display: none; position: absolute;">
                                         <a href="#loc_no" onclick="fillInput2('null')"
                                             class="position-relative">不挑地區</a>
-                                        <a href="#loc_Taichung" onclick="fillInput2('台中市')" class="position-relative">台中市</a>
+                                        <a href="#loc_Taichung" onclick="fillInput2('台中市')"
+                                            class="position-relative">台中市</a>
                                         <a href="#loc_1" onclick="fillInput2('選項2')" class="position-relative">選項2</a>
                                         <a href="#loc_2" onclick="fillInput2('選項3')" class="position-relative">選項3</a>
                                     </div>
@@ -216,37 +229,37 @@
 
 
                             <!-- 搜尋框 end -->
-                            <button class="position-absolute translate-middle rounded-pill"
-                                style="display: block; margin-left: 10%; margin-top: 1.5em; white-space: nowrap; z-index: 1;">
-                                <img class="icon" src="../_images/nav_icon/dating.png" alt="">約會
+                            <button class="position-absolute translate-middle rounded-pill filter_btn"
+                                style="margin-left: 10%;">
+                                <img class="icon" src="../images/nav_icon/dating.png" alt="">約會
                             </button>
-                            <button class="position-absolute translate-middle rounded-pill"
-                                style="display: block; margin-left: 30%; margin-top: 1.5em; white-space: nowrap; z-index: 1;">
-                                <img class="icon" src="../_images/nav_icon/group.png" alt="">聚餐
+                            <button class="position-absolute translate-middle rounded-pill filter_btn"
+                                style="margin-left: 30%;">
+                                <img class="icon" src="../images/nav_icon/group.png" alt="">聚餐
                             </button>
-                            <button class="position-absolute translate-middle rounded-pill"
-                                style="display: block; margin-left: 50%; margin-top: 1.5em; white-space: nowrap; z-index: 1;">
-                                <img class="icon" src="../_images/nav_icon/confetti.png" alt="">慶生
+                            <button class="position-absolute translate-middle rounded-pill filter_btn"
+                                style="margin-left: 50%;">
+                                <img class="icon" src="../images/nav_icon/confetti.png" alt="">慶生
                             </button>
-                            <button class="position-absolute translate-middle rounded-pill"
-                                style="display: block; margin-left: 70%; margin-top: 1.5em; white-space: nowrap; z-index: 1;">
-                                <img class="icon" src="../_images/nav_icon/handshake.png" alt="">商務
+                            <button class="position-absolute translate-middle rounded-pill filter_btn"
+                                style="margin-left: 70%;">
+                                <img class="icon" src="../images/nav_icon/handshake.png" alt="">商務
                             </button>
-                            <button class="position-absolute translate-middle rounded-pill"
-                                style="display: block; margin-left: 90%; margin-top: 1.5em; white-space: nowrap; z-index: 1;">
-                                <img class="icon" src="../_images/nav_icon/disabled-people.png" alt="">無障礙
+                            <button class="position-absolute translate-middle rounded-pill filter_btn"
+                                style="margin-left: 90%;">
+                                <img class="icon" src="../images/nav_icon/disabled-people.png" alt="">無障礙
                             </button>
                         </div>
                         <!-- 搜尋 icon = submit -->
-                        <input type="image" src="../_images/nav_icon/loupe.png" class="icon mt-2 ms-0"
+                        <input type="image" src="../images/nav_icon/loupe.png" class="icon mt-2 ms-0"
                             onclick="document.search.submit()">
                         <!-- <img src="./img/loupe.png" class="icon mt-2 ms-1" alt="" type="submit"> -->
                     </div>
                 </form>
                 <!-- 登入及註冊按鈕 -->
-                <div class="ms-auto me-5">
-                    <a href="#" class="container-fluid">
-                        <button class="btn btn-outline-success btn-sm text-nowrap">登入/註冊</button>
+                <div class="ms-3 me-5 col-1">
+                    <a href="#" class="">
+                        <button class="btn btn-sm btnLogin text-nowrap">登入/註冊</button>
                     </a>
                 </div>
             </div>
@@ -274,19 +287,21 @@
             <div class="row justify-content-evenly">
                 <div class="col-5 d-flex flex-column justify-content-center mt-3" style="overflow: hidden;">
                     <div id="mainImageRest">
-                        <!-- <a href="#" class=""> -->
-                        <img src="../_images/headpage_mainphoto/main_rest.jpeg" alt="" style="position: relative; left: 0%;">
-                        <!-- </a> -->
+                        <button href="" class="">
+                            <img src="../images/headpage_mainphoto/main_rest.jpeg" alt=""
+                                style="position: relative; left: 0%;">
+                        </button>
                     </div>
                     <div class="row justify-content-center" id="btnRest">
-                        <a href="#" class="btn btn-outline-danger text-center mt-3 w-50">找餐廳</a>
+                        <a href="" class="btn btn-outline-danger text-center mt-3 w-50">找餐廳</a>
                     </div>
                 </div>
                 <div class="col-5 d-flex flex-column justify-content-center mt-3" style="overflow: hidden;">
                     <div id="mainImageNotes">
-                        <a href="#" class="">
-                            <img src="../_images/headpage_mainphoto/main_notes.jpeg" alt="" style="position: relative; left: -60%;">
-                        </a>
+                        <button href="#" class="">
+                            <img src="../images/headpage_mainphoto/main_notes.jpeg" alt=""
+                                style="position: relative; left: -60%;">
+                        </button>
                     </div>
                     <div class="row justify-content-center" id="btnNotes">
                         <a href="#" class="btn btn-outline-danger text-center mt-3 w-50">看食記</a>
@@ -321,7 +336,7 @@
                 <div class="row justify-content-center">
                     <!-- 二個 icon -->
                     <a href="#" class="col-6 text-center">
-                        <i class="fa-brands fa-facebook"></i>  <!-- facebook -->
+                        <i class="fa-brands fa-facebook"></i> <!-- facebook -->
                     </a>
                     <a href="#" class="col-6 text-center">
                         <i class="fa-brands fa-instagram"></i> <!-- instagram -->
@@ -424,12 +439,11 @@
         }
 
     </script> -->
-    <!-- <script src="../js/jquery-3.7.1.js"></script>
-    <script src="../js/bootstrap.bundle.js"></script> -->
-    <script href="../js/nav.js"></script>
-    <script href="../js/headpage_opendoor_animate.js"></script>
-    <script href="../js/footer.js"></script>
+    <script src="../js/jquery-3.7.1.js"></script>
+    <script src="../js/bootstrap.bundle.js"></script>
     <script src="../js/headpage_opendoor_animate.js"></script>
+    <script scr="../js/nav.js"></script>
+    <script src="../js/footer.js"></script>
 </body>
 
 </html>
