--- a/Swallab/foodNotes/demoHotpot.html
+++ b/Swallab/foodNotes/demoHotpot.html
@@ -204,7 +204,7 @@
                     <div class="row d-flex justify-content-center m-2 p-2 commentHeadphoto" >
                         <div class="col-4 d-flex flex-column align-items-center justify-content-center p-3" >
                             <img src="../images/other/小豬皮傑.jpg" alt=""/>
-                            <div >小豬皮傑</div>
+                            <div >小熊維尼</div>
                         </div>
                         <div class="col-8 p-0 d-flex flex-column">
                             <p>
