--- a/Swallab/headpage/headpage.html
+++ b/Swallab/headpage/headpage.html
@@ -170,21 +170,20 @@
                     <div class="d-flex" style="width: 100%;">
                         <!-- hover、click 換 icon -> src="./img/blog.png" -->
                         <div id="theicon" class="theicon mt-2 me-0 align-items-center justify-content-center">
-                            <div id="popup"
-                                class="popup row text-center d-flex align-items-center justify-content-center">
+                            <div id="popup" class="popup text-center d-flex align-items-center justify-content-center">
                                 <p><i id="showicon" class=""></i></p>
                             </div>
                             <div id="popupBR" class="popupBR">
-                                <div id="popupBlog" class="col-6 text-center">
+                                <div id="popupBlog" class="col-4 text-center">
                                     <p class="text-center"><i class="fa-solid fa-book-open"></i></p>
                                 </div>
-                                <div id="popupRest" class="col-6 text-center">
+                                <div id="popupRest" class="col-4 text-center">
                                     <p><i class="fa-solid fa-utensils"></i></p>
                                 </div>
                             </div>
                         </div>
-
-
+                        
+                        
 
                         <!-- 搜尋框 + 情境按鈕(pill 會改成底線) -->
                         <div class="d-block position-relative m-0 p-0 col">
@@ -350,99 +349,12 @@
 
 
     <!-- <script>
-        // icon 替換 start
-        function showPopup() {
-            document.getElementById('popup').style.display = 'block';
-            document.getElementById('popupBlog').style.display = 'block';
-            document.getElementById('popupRest').style.display = 'block';
-        }
-
-        function hidePopup() {
-            document.getElementById('popup').style.display = 'none';
-            document.getElementById('popupBlog').style.display = 'none';
-            document.getElementById('popupRest').style.display = 'none';
-        }
-
-
-        document.getElementById('popupBlog').addEventListener('click', function () {
-            document.querySelector('.theicon').style.backgroundImage = 'url("./img/blog.png")';
-        });
-
-        document.getElementById('popupRest').addEventListener('click', function () {
-            document.querySelector('.theicon').style.backgroundImage = 'url("./img/restaurant.png")';
-        });
-        //  icon 替換 end
-
-        // 開門動畫 start
-        var rest = document.querySelector("#mainImageRest");
-        rest.addEventListener("click", toggleDoorLeft);
-        btnRest.addEventListener("click", toggleDoorLeft);
-
-        function toggleDoorLeft() {
-            rest.classList.toggle("doorOpenLeft");
-            setTimeout(function () {
-                window.location.href = '#';
-            }, 1500);
-        }
-
-        var notes = document.querySelector("#mainImageNotes");
-        notes.addEventListener("click", toggleDoorRight);
-        btnNotes.addEventListener("click", toggleDoorRight);
-
-        function toggleDoorRight() {
-            notes.classList.toggle("doorOpenRight");
-            setTimeout(function () {
-                window.location.href = '#';
-            }, 1500);
-        }
-        // 開門動畫 end
-
-        // 搜尋框
-        // 點擊輸入框，切換下拉選單的顯示和隱藏
-        function myFunction() {
-            var dropdown = document.getElementById("myDropdown");
-            if (dropdown.style.display === "none") {
-                dropdown.style.display = "block";
-            } else {
-                dropdown.style.display = "none";
-            }
-        }
-
-        function myFunction2() {
-            var dropdown = document.getElementById("myDropdown2");
-            if (dropdown.style.display === "none") {
-                dropdown.style.display = "block";
-            } else {
-                dropdown.style.display = "none";
-            }
-        }
-        // 搜尋框顯示
-        function fillInput(value) {
-            document.getElementById('myInput').value = value;
-            document.getElementById('myDropdown').style.display = "none";
-            document.getElementById('myInput2').style.display = "block";
-        }
-
-        function fillInput2(value) {
-            document.getElementById('myInput2').value = value;
-            document.getElementById('myDropdown2').style.display = "none";
-            document.getElementById('myInput1').style.display = "block";
-
-            // SQL
-            // 'myInput' 和 'myInput2' 的值作為查詢條件
-        }
-        // 點擊其他地方隱藏下拉
-        window.onclick = function (e) {
-            e.preventDefault();
-            document.getElementById('myDropdown').style.display = "none";
-            document.getElementById('myDropdown2').style.display = "none";
-        }
-
     </script> -->
+
     <script src="../js/jquery-3.7.1.js"></script>
     <script src="../js/bootstrap.bundle.js"></script>
     <script src="../js/headpage_opendoor_animate.js"></script>
-    <script scr="../js/nav.js"></script>
+    <script src="../js/nav.js"></script>
     <script src="../js/footer.js"></script>
 </body>
 
